--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Santy's Business Platform</title>
-    <!-- This script loads your compiled React app from the 'dist' folder -->
+    
+    <!-- *** THE FIX IS HERE: This line loads all the styling *** -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- This script loads your compiled React app -->
     <script src="/bundle.js" type="module" defer></script>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-slate-100">
     <!-- React will attach your entire application to this div -->
     <div id="root"></div>
   </body>
